# winmock

./: CMakeLists.txt  README.md  bootstrap.bat
client/: CMakeLists.txt  client.c  client.h  main.c
unittest/: CMakeLists.txt  client_mock.c  client_unittest.cpp
